--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "babel-eslint": "^6.0.5",
     "babel-jest": "^15.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-stage-0": "6.22.0",
     "eslint": "^2.13.1",
     "fbjs-scripts": "^0.7.1",
     "jest": "^17.0.3",
